# Modern-Computational-Nonlinear-Filtering

./: .gitignore  AUDIT_2026-07-08.md  CMakeLists.txt  COMPARISON_RESULTS.md  DEVELOPMENT_NOTES.md  FINAL_AUDIT_SUMMARY.md  README.md  SRUKF_STATUS.md  bootstrap.sh
.github/workflows/: ci.yml
.gpd/research-map/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  FORMALISM.md  REFERENCES.md  STRUCTURE.md  VALIDATION.md
Benchmarks/: CMakeLists.txt  README.md
Benchmarks/include/: BenchmarkRunner.h
Benchmarks/src/: run_benchmarks.cpp
Common/include/: FilterMath.h  TestCheck.h
EKF/: CMakeLists.txt  main.cpp
EKF/include/: EKFSmoother.h
EKF/tests/: test_ekf_smoother.cpp
PKF/: CMakeLists.txt
PKF/include/: particle_filter.hpp  particle_filter_gpu.hpp  particle_fixed_lag.hpp  resampling.hpp
PKF/src/: example_main.cpp
PKF/tests/: test_particle.cpp  test_particle_const.cpp
RBPKF/: CMakeLists.txt
RBPKF/examples/: example_rbpf_ctrv.cpp
RBPKF/include/rbpf/: kalman_filter.hpp  rbpf_core.hpp
RBPKF/tests/: test_rbpf_basic.cpp  test_rbpf_logdet.cpp
UKF/: CMakeLists.txt  main.cpp  main_srukf.cpp
UKF/include/: SRUKF.h  SRUKFFixedLagSmoother.h  SRUKFSmoother.h  SigmaPoints.h  UKF.h  UKFSmoother.h  UnscentedFixedLagSmoother.h
UKF/tests/: test_srukf_angular_wrap.cpp  test_srukf_initialize.cpp  test_srukf_smoother.cpp  test_ukf_numerical.cpp  test_ukf_smoother.cpp
cmake/: nlfConfig.cmake.in
